# netscanner

./: README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
examples/: example_scans.py
netscanner/: README.md  pyproject.toml
netscanner/docs/: USAGE.md
netscanner/src/netscanner/: __init__.py  scanner.py  services.py
netscanner/tests/: test_scanner.py  test_utils.py
src/: __main__.py  discovery.py  output.py
src/netscanner/: __main__.py  output.py  utils.py
tests/: __init__.py
